--- a/php-azure-pipelines.yml
+++ b/php-azure-pipelines.yml
@@ -5,7 +5,7 @@ variables:
   # Azure Resource Manager connection created during pipeline creation
   azureSubscription: 'democonnection-0807'
   # Web app name
-  webAppName: 'phpapplndemo'
+  webAppName: 'phpapplndemonew'
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   # Environment name
